--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /*home icon found on every page except homepage*/
-#home {
+.home {
   width: 50px;
   height: 50px;
   position: fixed;
@@ -91,4 +91,4 @@ footer {
   margin: 20px;
 }
 
-/*Notes Page*/
+/*Weather Page */
