--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,8 @@
 body {
   margin:0;
 }
-h1 {
+
+#title {
   font-family: 'Lily Script One', cursive;
   font-size: 50px;
   color: #ee6e73;
@@ -34,7 +35,9 @@ h5 {
 
 header {
   height: 20vh;
-}
+  }
+
+
 
 main {
   height: 75vh;
@@ -91,6 +94,41 @@ footer {
   margin: 20px;
 }
 
+/*Notes Page*/
+/* styling the modal box background */
+  .modalBox {
+  background-color: rgba(0, 0, 0, 0.4);;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1;
+}
+
+/*Styling the welcome box*/
+.welcome {
+  background-color: white;
+  height: 30vh;
+  width: 40vw;
+  border-radius: 30px;
+  border: solid rgba(18, 191, 255, 0.4) 10px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  font-size: 20px;
+}
+
+#ok-btn {
+  font-size: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+
 /*Weather Page */
 
 #currentForecast {
@@ -110,9 +148,8 @@ footer {
 }
 
 /*News Page*/
-#news {
+#news-heading{
+  font-size: 30px;
   color: #53BBB4;
   font-family: 'Lily Script One', cursive;
-  font-size: 30px;
-  margin-bottom: 30px;
 }
