--- a/styles/style.css
+++ b/styles/style.css
@@ -10,20 +10,26 @@
 
 
 /*homepage*/
-body {
-  margin:0;
-}
 
 #title {
   font-family: 'Lily Script One', cursive;
-  font-size: 50px;
+  font-size: 100px;
   color: #ee6e73;
   margin-left: 200px;
+  margin-top: 50px;
   margin-bottom: 0;
 }
 
+#subtitle {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  font-weight: 300;
+  font-size: 50px;
+}
 
-h3, h5, footer, #quote {
+
+
+ h5, footer, #quote {
   font-family: 'Roboto', sans-serif;
   text-align: center;
   font-weight: 300;
@@ -31,13 +37,14 @@ h3, h5, footer, #quote {
 
 h5 {
   z-index: 1;
+  font-size: 30px;
+  margin-bottom: 30px;
 }
 
 
 #homepage-header {
   height: 20vh;
   }
-
 
 
 #part1 {
@@ -48,12 +55,13 @@ h5 {
 footer {
   height: 5vh;
   margin: 0;
+  font-size: 20px;
 }
 
 #quote-icon {
-  height: 200px;
-  weight: 200px;
-  margin-top: 100px;
+  height: 300px;
+  weight: 300px;
+  margin-top: 200px;
   z-index: 1;
 }
 
@@ -73,40 +81,79 @@ footer {
 }
 
 /*Actions Page*/
-#background{
-  opacity: 0.4;
-  background-size: cover;
+.actionsPage {
+display: flex;
+text-align: center;
+background-image: url('http://christinawilliamsblog.com/wp-content/uploads/2015/03/Desktop-Wallpaper-01.png');
+background-repeat: no-repeat;
+background-size: cover;
+width: 100vw;
+height: 100vh;
 }
 
 #currentDate {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lily Script One', cursive;
   margin-left: 30px;
   margin-top: 30px;
-  height: 50px;
-  width: 100px;
+  font-size: 30px;
 }
 
 
-#question, #questionTwo {
+#question {
+  display: inline-block;
   color: #53BBB4;
   font-family: 'Lily Script One', cursive;
-  font-size: 30px;
-  margin-bottom: 30px;
-  z-index: 1
+  font-size: 60px;
+  margin-top: 400px;
+  margin-bottom: 50px;
   }
 
 #weather, #news, #notes{
-  width: 100px;
-  height: 100px;
-  margin: 20px;
+  width: 200px;
+  height: 200px;
+  margin: 50px;
   z-index: 1;
 }
 
 /*Notes Page*/
 
-  .notesPage {
-    display: flex;
+.notesPage {
+  display: flex;
+  text-align: center;
+  background-image: url('https://d3ui957tjb5bqd.cloudfront.net/images/screenshots/products/135/1355/1355092/h58vxj0z2wz7kv6bcnh0oluql4eozgzuokalvictjrcrdee6xakyude5glrkxcqq-f.jpg?1465574296');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
+
+
+#questionTwo {
+  display: inline-block;
+  color: #53BBB4;
+  font-family: 'Lily Script One', cursive;
+  font-size: 60px;
+  margin-top: 300px;
+  margin-bottom: 0;
+}
+
+#date {
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
+#textBox {
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+  width: 500px;
+  height: 300px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+
+}
+
 /* styling the modal box background */
   .modalBox {
   background-color: rgba(0, 0, 0, 0.4);;
@@ -147,39 +194,129 @@ footer {
   height: 100vh;
 }
 
-.part3  {
-  z-index: 2;
-  justify-content: center;
+#all-notes {
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
 
 #entries-list {
   list-style: none;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
+  height: 200px;
+  overflow-y: scroll;
 }
 
 
+#see-all-btn {
+  margin-left: 20px;
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+#save-btn{
+  font-size: 30px;
+  border-radius: 10px;
+}
+
+.deleteBtn, .updateBtn {
+  margin: 10px;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
 /*Weather Page */
+
+.weatherPage {
+  display: flex;
+  text-align: center;
+  background-image: url('http://static1.squarespace.com/static/564a2c54e4b066ce77adf084/t/5696c105df40f3edbe83b651/1452720399678/POLYGON+PATTERN.png?format=1500w');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
 
 #currentForecast {
   color: #53BBB4;
   font-family: 'Lily Script One', cursive;
-  font-size: 30px;
-  margin-bottom: 30px;
+  font-size: 60px;
 }
 
 .left , .right, .bottom {
   margin: 50px;
 }
 
-.icon {
-  width: 500px;
-  height: 500px;
+#icon {
+  width: 200px;
+  height: 200px;
+}
+
+#go-btn {
+  font-size: 30px;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.left, .right, .bottom, #search-box-div, #zipcode{
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+#search-box-div {
+  color: #53BBB4;
+}
+
+#zipcode {
+  width: 300px;
 }
 
 /*News Page*/
+.newsPage {
+  display: flex;
+  text-align: center;
+  background-image: url('http://millennialmagazine.com/wp-content/uploads/2016/01/personalized-B.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+
 #news-heading{
-  font-size: 30px;
+  font-size: 60px;
   color: #53BBB4;
   font-family: 'Lily Script One', cursive;
+  margin-top: 0;
 }
+
+.selection{
+  text-align: center;
+  align-content: center;
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+  color: #53BBB4;
+}
+
+ #go-button {
+   text-align: center;
+   font-size: 20px;
+   border-radius: 5px;
+   font-family: 'Roboto', sans-serif;
+   margin-left: 280px;
+ }
+
+ .headlines {
+   width: 800px;
+   height: 500px;
+   overflow-y: auto;
+   align-content: center;
+   background-color: white;
+   border-radius: 20px;
+   font-family: 'Roboto', sans-serif;
+  margin-left: 700px;
+ }
