worked on CRUD , specifically delete and update

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,10 +123,15 @@ height: 100vh;
   background-image: url('https://d3ui957tjb5bqd.cloudfront.net/images/screenshots/products/135/1355/1355092/h58vxj0z2wz7kv6bcnh0oluql4eozgzuokalvictjrcrdee6xakyude5glrkxcqq-f.jpg?1465574296');
   background-repeat: no-repeat;
   background-size: cover;
+  align-content: center;
   width: 100vw;
   height: 100vh;
 }
 
+#all-div {
+  width: 800px;
+  margin-left: 600px;
+}
 
 #questionTwo {
   display: inline-block;
